# UniversityTeachingAssistent

./: .env  .gitignore  README.md  docker-compose.yml  test_api.py  test_api2.py  test_health.py  test_login_err.py  test_root.py
.github/workflows/: deploy.yml
backend/: db.py  index.py  main.py  migrate_day9.sql  pyproject.toml  requirements.txt  test_connections.py  test_grading.py  test_ollama.py  vercel.json
backend-vercel/: vercel.json
backend/routers/: auth.py  courses.py  grading.py  graph.py  integrity.py  rag.py  webhooks.py
backend/services/: cloud_llm.py  document_processor.py  embeddings.py  integrity_analyzer.py  llm_router.py  viva_generator.py
frontend/: .env.example  components.json  next.config.ts  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/users/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/grading/: page.tsx
frontend/src/app/graph/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/router/: page.tsx
frontend/src/app/student/dashboard/: page.tsx
frontend/src/app/student/exam/: page.tsx
frontend/src/app/student/tutor/: page.tsx
frontend/src/app/viva/: page.tsx
frontend/src/components/ui/: ClientLayout.tsx  DraftEditor.tsx  PagePrimitives.tsx  Sidebar.tsx  StatCard.tsx  button.tsx  card.tsx  input.tsx  textarea.tsx
frontend/src/hooks/: useIntegrityTracker.ts
frontend/src/lib/: api.ts  auth.ts
frontend/src/utils/supabase/: client.ts  middleware.ts  server.ts
(+6 files in other folders)
